# ict-trading-bot

./: .env.example  .gitignore  CLAUDE.md  DECISIONS.md  Dockerfile  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: best_params.yml  default.yml  fixed_inner.yml  fixed_outer.yml  fixed_trading.yml  seed_params_xauusd_w1.yml
infra/: cloud-init.yml.tpl  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
infra/scripts/: deploy.sh  fetch-results.sh  run-optuna.sh  seed-db.sh  status.sh  teardown.sh
infra/vast/: .env.example  README.md  fetch.sh  lib.sh  provision.sh  status.sh  stop.sh  train.sh  train_policy.sh
scripts/: ablation_news.py  aggregate_to_m1.py  demo_midas_phase1.py  download_dukascopy_parquet.py  download_fxcm.py  export_candles_parquet.py  fetch_ig_specs.py  init_db.sql  optimize_strategy.py  probe_hidden_states.py  run_backtest.py  run_lgbm_backtest.py  run_midas_global_optuna.py  run_midas_optuna.py  run_midas_replay.py  run_midas_wf.py  run_midas_wf_optuna.py  run_rsi_backtest.py  run_walk_forward.py  run_walk_forward_reduced.py  run_walk_forward_robust.py  run_walk_forward_smart.py  run_walk_forward_xauusd.py  run_walk_forward_xauusd_v2.py  seed_and_interpret_news.py  seed_from_csv.py  seed_from_fxcm.py  seed_from_twelvedata.py  seed_from_yahoo.py  seed_historical_data.py  seed_news_history.py  seed_ticks_dukascopy.py  seed_ticks_retry.py  train_policy.py  train_world_model.py  validate_world_model.py
src/backtest/: engine.py  metrics.py  report.py  simulator.py  vectorized.py  walk_forward.py
src/common/: config.py  db.py  exceptions.py  logging.py  models.py
src/execution/: order_manager.py  portfolio.py  position_sizer.py  risk_manager.py
src/improvement/: llm_analyzer.py  optuna_optimizer.py  patch_manager.py  trade_logger.py  validator.py  versioning.py
src/market_data/: csv_adapter.py  ig_client.py  ingestion.py  storage.py
src/midas/: __init__.py  candle_builder.py  ensemble.py  feature_extractor.py  global_optimizer.py  labeler.py  optimizer.py  replay_engine.py  trade_simulator.py  trainer.py  types.py  walk_forward.py
src/monitoring/: health.py  metrics_exporter.py  telegram_bot.py
src/morpheus/: __init__.py  actor_critic.py  dataset.py  decoder.py  encoder.py  imagination.py  policy_trainer.py  rssm.py  training.py  transformer_wm.py  validation.py  world_model.py
src/news/: base.py  event_manager.py  interpreter.py  (+1 more)
tests/: conftest.py
(+59 files in other folders)
