[project]
name = "ict-trading-bot"
version = "0.1.0"
description = "Automated multi-asset trading bot using ICT/SMC concepts with AI-enriched news"
requires-python = ">=3.12"
dependencies = [
    # Core
    "polars>=1.0",
    "numpy>=2.0",
    "pydantic>=2.0",
    "structlog>=24.0",
    "pyyaml>=6.0",
    "asyncpg>=0.30",
    "python-dotenv>=1.0",
    "aiohttp>=3.10",
    # Broker
    "trading-ig",
    "munch",
    "pandas>=2.0",
    "python-dotenv>=1.0",
    "yfinance>=1.2",
    # News
    "websockets>=13.0",
    "finnhub-python>=2.4",
    # LLM
    "anthropic>=0.40",
    # ML/Optimization
    "optuna>=4.0",
    "lightgbm>=4.0",
    "numba>=0.60",
    "torch>=2.0",
    "pandas-ta>=0.3",
    # Monitoring
    "python-telegram-bot>=21.0",
    "prometheus-client>=0.21",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "pytest-mock>=3.14",
    "aioresponses>=0.7",
    "pandas>=2.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "types-PyYAML>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = [
    "scripts/run_lgbm_backtest.py",  # experimental, not in main worker path
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "trading_ig.*",
    "finnhub.*",
    "optuna.*",
    "asyncpg.*",
    "numba.*",
    "torch.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests requiring external services (DB, API)",
    "slow: marks slow tests",
]

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
fail_under = 70
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__",
]
